# skills_vis

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml
dev/: README.md
docs/user-guide/: user-guide-en.md  user-guide-zh.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.spec.js  App.vue  i18n.js  main.js  styles.css
frontend/src/api/: client.js  client.spec.js  skills_import.js
frontend/src/api/__tests__/: skills_import.spec.js
frontend/src/components/: ContextMenu.vue  EditorPanel.vue  GraphPanel.vue  ImportSkillsModal.vue  PanelHeader.vue  SessionMonitorDrawer.vue  SkillEntryForm.vue  SkillSavedEntryRow.vue  SkillStarterRow.vue  SkillsDrawer.vue  Toolbar.vue
frontend/src/components/__tests__/: ContextMenu.spec.js  EditorPanel.spec.js  GraphPanel.spec.js  ImportSkillsModal.spec.js  PanelHeader.spec.js  (+3 more)
frontend/src/composables/: useFileOps.js  usePanelResize.js  useSkillsDrawer.js  useTree.js  useWorkspaceUi.js
frontend/src/locales/: en.js  zh-TW.js
frontend/src/test/: setupCanvas.js
frontend/src/utils/: fileKind.js  parseFrontMatter.js  path.js
skills/skills-monitor/: SKILL.md
skills_vis/: __main__.py  desktop.py  file_ops.py  main.py  mcp_server.py  schemas.py  skill_importer.py  skills_store.py  usage_store.py
skills_vis/tests/: conftest.py  test_api.py  test_desktop.py  test_file_ops.py  test_mcp_server.py  test_schemas.py  test_skill_importer.py  test_skills_api.py  test_startup.py  test_usage_api.py  test_usage_store.py
(+17 files in other folders)
